# FoxControl-Gateway

./: .gitignore  CMakeLists.txt  README.md
cmake/: CommonLibraries.cmake  Platform.cmake  TemplateProject.cmake
src/: dto.hpp  gateway.cpp  gateway.hpp  main.cpp
